[project]
name = "pyclickhouse"
version = "0.1.0"
description = "Python async ClickHouse ORM using Pydantic"
authors = [{name = "Ashwath Nadahalli", email = "anadahalli@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"

dependencies = [
    "asynch>=0.3.1",
    "clickhouse-connect>=0.13.0",
    "prqlc>=0.13.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

classifiers = []

[project.urls]
Homepage = "https://github.com/anadahalli/pyclickhouse"
Repository = "https://github.com/anadahalli/pyclickhouse"

[dependency-groups]
dev = [
    { include-group = "tests"},
    { include-group = "docs"},
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]
tests = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-watcher>=0.6.3",
    "testcontainers>=4.14.1",
]
docs = [
    "zensical>=0.0.24",
]

[tool.pytest]
asyncio_mode = "auto"
console_output_style = "count"
addopts = ["--pdbcls=IPython.terminal.debugger:TerminalPdb", "--no-header"]
testpaths = ["tests"]

[tool.uv.build-backend]
module-name = "pyclickhouse"
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
