[project]
name = "pyclickhouse"
version = "0.1.0"
description = "A modern async Python ORM for ClickHouse"
authors = [{name = "Ashwath Nadahalli", email = "anadahalli@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"

dependencies = [
    "asynch>=0.3.1",
    "clickhouse-connect>=0.13.0",
    "loguru>=0.7.3",
    "prqlc>=0.13.10",
    "pydantic>=2.12.5",
]

classifiers = [
    "Development Status :: 3 Alpha",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: PRQL",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    { include-group = "tests"},
    { include-group = "docs"},
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]
tests = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-watcher>=0.6.3",
    "testcontainers>=4.14.1",
]
docs = [
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.24",
]

[project.urls]
Homepage = "https://github.com/anadahalli/pyclickhouse"
Repository = "https://github.com/anadahalli/pyclickhouse"

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"
console_output_style = "count"
addopts = [
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--no-header",
]
filterwarnings = [
    "ignore:The 'u' type code is deprecated and will be removed in Python 3.16",
]

[tool.uv.build-backend]
module-name = "pyclickhouse"
module-root = "src"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
